bad fixes (check later)

--- a/StorhaugenWebsite/Components/MyRecipes.razor
+++ b/StorhaugenWebsite/Components/MyRecipes.razor
@@ -143,7 +143,7 @@
                                 <MudIconButton Icon="@Icons.Material.Rounded.Publish"
                                               Size="Size.Small"
                                               Color="Color.Primary"
-                                              OnClick="@((e) => { e.StopPropagation(); PublishRecipe(recipe); })" />
+                                              OnClick="@((e) => { PublishRecipe(recipe); })" />
                             }
                         </div>
                     </div>
