--- a/StorhaugenWebsite/Components/HouseholdMembersDialog.razor
+++ b/StorhaugenWebsite/Components/HouseholdMembersDialog.razor
@@ -3,7 +3,7 @@
     Still needed while households exist, but new features should use user-level views.
 *@
 @using StorhaugenWebsite.ApiClient
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 
 @inject IApiClient ApiClient
 @inject IAuthService AuthService
