--- a/StorhaugenWebsite/Components/HouseholdSelector.razor
+++ b/StorhaugenWebsite/Components/HouseholdSelector.razor
@@ -4,7 +4,7 @@
     users operating without a household (Personal Cookbook concept).
 *@
 @using StorhaugenWebsite.Services
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @inject IHouseholdStateService HouseholdState
 @inject NavigationManager Navigation
 
