--- a/StorhaugenWebsite/Components/InviteMemberDialog.razor
+++ b/StorhaugenWebsite/Components/InviteMemberDialog.razor
@@ -3,7 +3,7 @@
     Still needed while households exist for member management.
 *@
 @using StorhaugenWebsite.ApiClient
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @using System.ComponentModel.DataAnnotations
 @inject IApiClient ApiClient
 @inject ISnackbar Snackbar
