--- a/StorhaugenWebsite/Pages/BrowseDetails.razor
+++ b/StorhaugenWebsite/Pages/BrowseDetails.razor
@@ -1,7 +1,7 @@
 @page "/browse/{Id}"
 @using Microsoft.AspNetCore.Authorization
 @using StorhaugenWebsite.ApiClient
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @inject IApiClient ApiClient
 @inject IFoodService FoodService
 @inject NavigationManager Navigation
