--- a/StorhaugenWebsite/Pages/Settings.razor
+++ b/StorhaugenWebsite/Pages/Settings.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using StorhaugenWebsite.ApiClient
 @using StorhaugenWebsite.Models
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @inject IAuthService AuthService
 @inject IDeviceStateService DeviceState
 @inject IHouseholdStateService HouseholdState
