--- a/StorhaugenWebsite/Components/NotificationBell.razor
+++ b/StorhaugenWebsite/Components/NotificationBell.razor
@@ -1,5 +1,5 @@
 @using StorhaugenWebsite.ApiClient
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @inject IApiClient ApiClient
 @inject IHouseholdStateService HouseholdState
 @inject ISnackbar Snackbar
