--- a/StorhaugenWebsite/Components/PublishRecipeDialog.razor
+++ b/StorhaugenWebsite/Components/PublishRecipeDialog.razor
@@ -1,5 +1,5 @@
 @using MudBlazor
-@using StorhaugenWebsite.DTOs
+@using StorhaugenWebsite.Shared.DTOs
 @using StorhaugenWebsite.Services
 @inject IUserRecipeService RecipeService
 @inject ISnackbar Snackbar
